--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </button>
         </div>
       </div>
-      <div class="mobile fixed-bottom pb-2">
+      <div class="mobile fixed-bottom pb-2 text-center">
         <div class="col-sm-12 col-lg-6 align-items-center mt-3">
           <button type="button" id="showListMobile" class="btn btn-primary border-dark">
             <span><i class="fas fa-th-list pr-2"></i></span>
